--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
+    "resend": "^4.0.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
