--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
